# Music-Platform-Bld.ai-Training

./: .env.example  .gitignore  conftest.py  manage.py  pyproject.toml  pytest.ini
albums/: admin.py  filters.py  forms.py  models.py  serializers.py  tasks.py  urls.py  validators.py  views.py
albums/migrations/: 0001_initial.py  0002_auto_20221101_1130.py  0002_initial.py  0003_alter_song_album.py
albums/tests/: test_endpoints.py  test_serializers.py
artists/: admin.py  models.py  serializers.py  urls.py  views.py
artists/migrations/: 0001_initial.py  0002_auto_20221101_1130.py  0002_initial.py
artists/tests/: test_views.py  tests_views.py
authentication/: serializers.py  urls.py  views.py
authentication/tests/: test_login.py  test_logout.py  test_register.py  tests_view.py
music_platform/: RESULTS.md  celery.py  settings.py  urls.py  wsgi.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20221102_1331.py
