[tool.poetry]
name = "music-platform"
version = "0.1.0"
description = "Music Platform"
authors = ["7oSkaaa <ahmed.7oskaa@gmail.com>"]
readme = "README.md"
packages = [{include = "music_platform"}]

[tool.poetry.dependencies]
python = "^3.10"
dotenv = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
